# otto-coder

./: CLAUDE.md  Cargo.toml  DEPLOYMENT.md  GEMINI.md  SERVER_DIAGNOSTIC_COMMANDS.md  WEBASSIST_DIAGNOSTIC_SUMMARY.md  WEBASSIST_FIX_PLAN.md
.sqlx/: query-0e732fb1ba315a95858de3bee238ad2a3040f529fe88df084a6f50b12c0a55f0.json  query-10ad91988d97c25c757ccca9a3140313f093e4ad1cdd9ab7cb2ac4c1fb51ddb7.json  query-11381ca070c1d1829c445783b92a414108c7921160e91c2255cc385ba732bd39.json  query-149891df80a319c5445681e81e315433afbc6ff3fc8b88be0612e9fcfc9e8067.json  query-221bd43cf3f670718c22cd3c6fc44326e350bf9d70723bc6001390c4fb3a720b.json  query-3f959c496f979c29516c1127744692d491591e9864e61341ae3fcca98cde7915.json  query-45a212f1e0b783d928cfe595a3ec59df89c188827254736c1dda96a420e83152.json  query-5686c518004124f4e8329338c99fe1038ed9661a0207a344d0c0ace73376c1e6.json  query-7ba1dc1a07cafe04b6f0de74278e720a89f1f9c7b1a9c6a5238f77ec00deba95.json  query-876b8095a78cebe0d1659bc4ea4c106e40beb8cd5ebab58ff92eed41b7704264.json  query-898b922c4eb5dc54fd71a9493004d53dba3ff38475cf3405e77762ae5ff80c2b.json  query-961313aabcfc74735b80713077702752cf3260f7bd7216c98ced1db8d9bbed9a.json  (+19 more)
crates/web_assist/: Cargo.toml
crates/web_assist/prompts/: 01_initial_review.md  02_ai_research.md  03_design_mockup.md  04_content_collection.md  05_development.md  06_quality_assurance.md  07_client_preview.md  08_deployment.md  09_delivered.md
crates/web_assist/src/: approval_sync.rs  config.rs  lib.rs  models.rs  project_manager.rs  stage_executor.rs  supabase_client.rs  task_sync.rs  webhook.rs
(+74 files in other folders)
