[package]
name = "web_assist"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
anyhow = "1"
thiserror = "1"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for Supabase API
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Logging
tracing = "0.1"

# TypeScript type generation
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }

# Crypto for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Internal dependencies
db = { path = "../db" }
services = { path = "../services" }
executors = { path = "../executors" }
